# construction-safety-agent

./: .env  app.py  environments.txt  main.py  pyproject.toml  requirements.txt
DB/: index.pkl
core/: agentstate.py  confirm_retrieval.py  final_report.py  final_report_test.py  finalize_response.py  generate.py  generation_grader.py  grade.py  kanana.py  llm_utils.py  query.py  qwen.py  report_grader.py  retriever.py  rewrite.py  websearch.py
data/: chunks.pkl  db_builder.py
data/chunks/: chunks.json  chunks.pkl
data/data_md/: F.C.M 교량공사 안전보건작업 지침.md  I.L.M 교량공사 안전보건작업 지침.md  PCT거더 교량공사 안전보건작업지침.md  가공송전선로 철탑 심형기초공사 안전보건작업 지침.md  가설계단 설치 및 사용 안전보건작업 지침.md  가설구조물의 설계변경 요청 내용, 절차 등에 관한 작성지침.md  강관비계 안전작업지침.md  강아치교(벤트공법) 안전보건작업지침.md  갱폼(Gang form) 제작 및 사용안전 지침.md  건설공사 굴착면 안전기울기 기준에 관한 기술지침.md  건설공사 돌관작업 안전보건작업 지침.md  건설공사 안전보건 설계 지침.md  건설공사의 고소작업대 안전보건작업지침.md  건설기계 안전보건작업 지침.md  건설현장 용접용단 안전보건작업 기술지침.md  건설현장의 중량물 취급 작업계획서(이동식크레인) 작성지침.md  건축물의 석공사(내외장) 안전보건작업 기술지침.md  경량철골 천장공사 안전보건작업 지침.md  곤돌라(Gondola) 안전보건작업 지침.md  관로매설공사 안전보건작업 기술지침.md  관로매설공사(유압식 추진공법) 안전보건작업 지침.md  교량 슬래브거푸집 해체용 작업대차 안전작업 지침.md  교량공사(P.S.M공법) 안전작업 지침.md  교량공사(라멘교) 안전보건작업지침.md  교량공사의 이동식 비계공법(MSS) 안전작업 지침.md  굴착공사 계측관리 기술지침.md  굴착공사 안전작업 지침.md  굴착기 안전보건작업 지침.md  금속 커튼월(Curtain wall) 안전작업 지침.md  기성 콘크리트 파일 항타 안전보건작업 지침.md  낙하물 방지망 설치 지침.md  낙하물 방호선반 설치 지침.md  내장공사의 안전보건작업 지침.md  냉동냉장 물류창고 단열공사 화재예방 안전보건작업 지침.md  단순 슬래브 콘크리트 타설 안전보건작업 지침.md  덤프트럭 및 화물자동차 안전작업지침.md  미장공사 안전보건작업 지침.md  밀폐공간의 방수공사 안전보건작업 지침.md  발파공사 안전보건작업 지침.md  블록식 보강토 옹벽 공사 안전보건작업 지침.md  (+59 more)
data/markdown/: clean_md3.py
