[project]
name = "construction-safety-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "langchain>=1.0.2",
    "langgraph>=1.0.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
